answer module format

--- a/src/app/question/question-detail.component.html
+++ b/src/app/question/question-detail.component.html
@@ -47,5 +47,5 @@
   </ul>
   <p *ngIf="question.answers.lenght !== 1 "> Be the first to answers this question</p>
 
-  <app-answer-form></app-answer-form>
+  <app-answer-form class="answer-form"></app-answer-form>
 </div>
