--- a/src/app/question/question-detail.component.html
+++ b/src/app/question/question-detail.component.html
@@ -19,7 +19,7 @@
   <ul class="answers-list" *ngIf="question.answers.length > 0">
     <li *ngFor="let answer of question.answers">
       <h5>
-        {{ answer.user.firstName }} {{ answer.user.lastName }}
+        {{ answer.user.fullName() }}
         <small>{{answer.createdAt | amLocale: 'en' | amTimeAgo}}</small>
       </h5>
       <p class="description">
