--- a/src/app/question/question-form.component.html
+++ b/src/app/question/question-form.component.html
@@ -14,8 +14,22 @@
       ngModel>
   </mat-form-field>
   <mat-grid-list cols="3" rowHeight="3:2">
+
+    <mat-grid-tile>
+      <mat-radio-group [ngModel] name="icon" >
+      <mat-radio-button value="none">
+      <i mat-list-icon class="material-icons" >help</i>
+      <small>Other</small>
+      </mat-radio-button>
+      </mat-radio-group>
+    </mat-grid-tile>
+
     <mat-grid-tile *ngFor="let icon of icons">
-      <i mat-list-icon color="warn" class="devicon-{{ icon.name }}-{{ getIconVersion(icon) }} " ></i>
+      <mat-radio-group [ngModel] name="icon" >
+      <mat-radio-button value="devicon-{{ icon.name }}-{{ getIconVersion(icon) }}">
+      <i mat-list-icon class="devicon-{{ icon.name }}-{{ getIconVersion(icon) }} colored " ></i>
+      </mat-radio-button>
+      </mat-radio-group>
     </mat-grid-tile>
   </mat-grid-list>
   <button type="submit" name="submit-button" mat-raised-button color="accent">Send</button>
